# mlir-dace-smith

./: CMakeLists.txt
include/SDFG/Dialect/: Dialect.h  Dialect.td
include/SDFG/Dialect/nodes/: map.td  sdfg.td  state.td  tasklet.td
include/SDFG/Dialect/ops/: edge.td  memlet.td
include/SDFG/Translate/: Node.h
lib/SDFG/Dialect/: CMakeLists.txt  Dialect.cpp  Ops.cpp
lib/SDFG/Translate/: Node.cpp  liftToPython.cpp  translateToSDFG.cpp
sdfg-smith/: CMakeLists.txt  sdfg-smith.cpp
test/SDFG/Translate/map/: empty.mlir
test/SDFG/Translate/smith/: all.mlir  independent_store.mlir  map_args.mlir  mixed_copy.mlir  mixed_map_args.mlir  mixed_store_copy.mlir  nested_copy.mlir  nested_copy2.mlir  nested_store.mlir  par_store.mlir
